correction mobile

--- a/css/style.css
+++ b/css/style.css
@@ -186,6 +186,7 @@ input:focus {
 /****** Title header ***********/
 .tvhpdvdr{
     margin: 0;
+    font-size: 22px;
     
 }
 .epcvopn {
@@ -625,9 +626,10 @@ input:focus {
         
         
     }
-     .filters .titlefilters{
+     .filters h3.titlefilters{
+        
         flex: 0 0 100%;
-        margin: 0 0 8px 0;
+        margin: 0 0 8px 25px;
      }
     .filters .filtersbar {
         flex: 0 0 calc(50% - 16px);
@@ -639,6 +641,8 @@ input:focus {
         padding: 12px;
         font-size: 16px;
     }
+
+    
 
 
     /*Info bar*/
